# backtester

./: .gitignore  README.md  pyproject.toml
backtester/: __init__.py  backtest.py  broker.py  indicators.py  stats.py  strategy.py  utils.py
backtester/ml/: fvg_xgboost.py
backtester/notebooks/: xgboost_fvg.ipynb
backtester/strategy_utils/: SCHEMA.md  compare_fvg_backtests.py  fvg_backtested_csv_pipeline.py  fvg_bulk_run.py  fvg_detector.py  fvg_strategy.py  fvg_strategy_pd.py  test_fvg_backtest.py  test_fvg_detection.py
backtester/strategy_utils/fvg_utils/: data_prep.py  ema_bias_matrix.py  fvg_detector.py  master_dataset.py  timeframe.py
scripts/: compare_backtests.py  compare_backtests_2.py
utils/: generate_params.py  normalize_ohlcv_columns.py
