[tool.poetry]
name = "backtester"
version = "0.1.0"
description = ""
authors = ["zoltesh <braydude15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.5.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
bokeh = "^3.6.2"
pyarrow = "^21.0.0"
xgboost = "^3.0.4"
jupyterlab = "^4.4.5"
scikit-learn = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
